--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div class="start-loader">
+      <span class="loader"></span>
+    </div>
   </body>
 </html>
